Disable unnecessary bytecode verification in jvm-opts