@@ -198,7 +198,7 @@
                                          [binaryage/devtools "0.9.4"]]
                         :resource-paths ["dev-resources"]
                         :source-paths   ["dev-src" "test-utils"]
-                        :jvm-opts       ["-Djava.awt.headless=true" "-Xmx2G" "-Dfile.encoding=UTF-8"]
+                        :jvm-opts       ["-Djava.awt.headless=true" "-Xmx2G" "-Dfile.encoding=UTF-8" "-Xverify:none"]
                         :eastwood       {:continue-on-exception true
                                          :source-paths          ["src"]
                                          :test-paths            []}
